<resources>
    <string name="app_name">IPhome</string>
    <string name="barra" />
    <string name="logincaps">LOGIN</string>
    <string name="cadastrarcaps">CADASTRAR</string>
    <string name="appnamecaps">IPHOME</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginlower">Login</string>
    <string name="username">Username</string>
    <string name="senha">Senha</string>
    <string name="emailLower">E-mail</string>
    <string name="novidades">Eu desejo receber novidades por e-mail</string>
    <string name="ic_user">Icon made by Smashicons from www.flaticon.com </string>
    <string name="selecioneingredientes">Selecione os ingredientes:</string>
    <string name="Categorias">Alcool,Bebidas,Biscoitos,Carnes,Doces e Chocolates,Farinhas e Cereais,Frios e Embutidos,Frutas,Laticinios,Massas,Molhos,Oleo Vegetal,Origem Animal,Pães,Vegetais</string>
    <string name="buscarreceita">Buscar Receita</string>
    <string name="atualizar">Atualizar conta</string>
    <string name="IconeFem">Ícone Feminino</string>
    <string name="IconeMasc">Ícone Masculino</string>
    <string name="IconeAnimal">Ícone Animalzinho</string>
    <string name="Resultados">Resultados</string>
    <string name="ReceitasFavoritas">Receitas Favoritas</string>
    <string name="IP">"http://192.168.25.34:8080/"</string>
    <string name="Explicação">Olá, sejá muito bem vindo. Por favor, escolha alguns ingredientes dos quais você gostaria de fazer uma receita no dia de hoje, e iremos lhe mostrar algumas opções saborosas</string>
    <string name="fotousuario"></string>
    <string name="confirmar">Confirme sua senha</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="excluir">Excluir conta</string>
</resources>
