<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ContaActivity"
    android:background="@color/fundoAmarelo">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarConta"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_user"
        app:title="@string/app_name"
        app:titleTextColor="@color/fundoAmarelo" />

    <EditText
        android:id="@+id/et_username_conta"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:text="@string/username"
        android:textColor="@color/laranjaLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarConta"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_email_conta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/emailLower"
        android:textColor="@color/laranjaLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_conta"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_senha_conta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/senha"
        android:textColor="@color/laranjaLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_conta"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_icone1"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IconeFem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_senha_conta"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <ImageView
        android:id="@+id/iv_icone2"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IconeMasc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icone3"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[13]" />

    <ImageView
        android:id="@+id/iv_icone3"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IconeMasc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_senha_conta"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[9]" />

    <ImageView
        android:id="@+id/iv_icone4"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IconeFem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_icone2"
        app:layout_constraintStart_toEndOf="@+id/iv_icone6"
        app:layout_constraintTop_toBottomOf="@+id/iv_icone5"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[7]" />

    <ImageView
        android:id="@+id/iv_icone5"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IconeAnimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_icone3"
        app:layout_constraintStart_toEndOf="@+id/iv_icone1"
        app:layout_constraintTop_toBottomOf="@+id/et_senha_conta"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <ImageView
        android:id="@+id/iv_icone6"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IconeAnimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icone1"
        app:layout_constraintVertical_bias="0.012"
        tools:srcCompat="@tools:sample/avatars[8]" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarConta"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>