<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context=".Activity.MenuIngredienteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMenuIngrediente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="311dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBar"
        app:title="@string/app_name"
        app:titleTextColor="@color/fundoAmarelo"
        app:navigationIcon="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_selecionar"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="244dp"
        android:text="@string/selecioneingredientes"
        android:textAlignment="center"
        android:textColor="@color/laranjaLetras"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_buscarreceita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="17dp"
        android:text="@string/buscarreceita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_ingredientes" />

    <ScrollView
        android:id="@+id/sv_ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="278dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarMenuIngrediente"
        app:layout_constraintVertical_bias="0.874">

        <LinearLayout
            android:id="@+id/tl_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">

            <ExpandableListView
                android:id="@+id/lv_categoria"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFF"
                android:popupBackground="#FFFF" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Explicação"
        android:textAlignment="center"
        android:textColor="@color/fundoAmarelo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sv_ingredientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMenuIngrediente"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>